[metadata]
name = plover_dutch
version = 0.0.1
description = Dutch system for Plover
long_description = file: README.md
author = Willem Sonke
author_email = willem@wimiso.nl
license = GNU General Public License v2 or later (GPLv2+)
url = 
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
py_modules =
	plover_dutch

[options.entry_points]
plover.system =
  Dutch Stenotype = plover_dutch
